# skyvision-imx93

./: README.md
1_ground_station_ui/: CMakeLists.txt  aarch64-board.cmake  cross-build.sh  mux2mp4.py  skyvision_ui.py  wifi_manager.py
1_ground_station_ui/qml/: ButtonBar.qml  DiagLogModal.qml  DronePanel.qml  EventPanel.qml  LinkPanel.qml  Main.qml  OnScreenKeyboard.qml  QRModal.qml  RecordingsModal.qml  StatusBar.qml  WiFiModal.qml  ZoneAlertModal.qml
1_ground_station_ui/src/: AppController.cpp  AppController.h  BatteryMonitor.cpp  BatteryMonitor.h  CameraManager.cpp  CameraManager.h  Config.h  Detection.h  Detector.cpp  Detector.h  GstRunner.cpp  GstRunner.h  InferenceWorker.cpp  InferenceWorker.h  MqttPublisher.cpp  MqttPublisher.h  PlaybackRunner.cpp  PlaybackRunner.h  ScreenRecorder.cpp  ScreenRecorder.h  Tracker.cpp  Tracker.h  VideoItem.h  WifiManager.cpp  WifiManager.h  main.cpp
2_services/diagnosis/: skyvision_diag.py  vlm_diag_qwen.py  vlm_eval_qwen.py
2_services/diagnosis/results/: glass-insulator_0shot.json  glass-insulator_2shot.json  vari-grip_0shot.json  vari-grip_2shot.json
2_services/link-analyzer/: link_analyzer.py  skyvision-link-analyzer.service
2_services/webui/: gen_qr.py  skyvision-webui.service  webui_server.py
2_services/webui/static/: app.js  index.html  style.css
3_model_training/: _verify_rev.py  board_infer.py  coco2yolo_insplad.py  copy_best_srcs.py  mine_negatives.py  mine_negatives_insplad.py  pick_best_per_class.py  pick_candidates.py  pick_per_class_cand.py  sample_class_crops.py  train.py  train_insplad.py  train_insplad_v2.py  train_insplad_yolo11.py
